<resources>
    <string name="app_name">HalanChallenge</string>

    <!-- Login -->
    <string name="login_enter">تسجيل الدخول</string>
    <string name="login_user_name">اسم المستخدم</string>
    <string name="login_password">كلمه السر</string>



    <!-- Profile-->
    <string name="profile_email">ahmeed.mamdoouh@gmail.com</string>
    <string name="profile_user_name">أحمد ممدوح</string>
    <string name="profile_phone">01094093579</string>
    <string name="profile_product_title">منتجاتي</string>

    <!-- Product -->
    <string name="product_description"> هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم استخدام طريقة لوريم إيبسوم لأنها تعطي توزيعاَ طبيعياَ -إلى حد ما- للأحرف عوضاً عن استخدام "هنا يوجد محتوى نصي، هنا يوجد محتوى نصي" فتجعلها تبدو (أي الأحرف) وكأنها نص مقروء. العديد من برامح النشر المكتبي وبرامح تحرير صفحات الويب تستخدم لوريم إيبسوم بشكل إفتراضي كنموذج عن النص، وإذا قمت بإدخال "lorem ipsum" في أي محرك بحث ستظهر العديد من المواقع الحديثة العهد في نتائج البحث. على مدى السنين ظهرت نسخ جديدة ومختلفة من نص لوريم إيبسوم، أحياناً عن طريق الصدفة، وأحياناً عن عمد كإدخال بعض العبارات الفكاهية إليها.</string>
    <string name="product_more">المزيد</string>
    
    <!-- Product Details -->
    <string name="product_details_title">تفاصيل المنتج</string>
    <string name="product_details_description">الوصف</string>
    <string name="product_details_back">رجوع</string>
    <string name="product_details_cash">كاش</string>
    <string name="product_details_price"> %s جنية</string>


    <!--Errors -->
    <!-- Login -->
    <string name="error_login_wrong_account">عفوا هذا الحساب غير موجود </string>
    <string name="error_login_username_length">عفوا إسم المستخدم يجب ان يكون ما بين 6 إلي 15 حرف  </string>
    <string name="error_login_not_alphanumeric">عفوا إسم المستخدم يجب ان يحتوي فقط علي حروف او ارقام</string>
    <string name="error_login_password_length">عفوا يجب إدخال كلمة المرور </string>


    <!-- base errors-->
    <string name="error_no_connection">عفوًا ، لا يوجد اتصال بالشبكة</string>
    <string name="error_message_title">خطأ!</string>
    <string name="success_message_title">تم بنجاح</string>
    <string name="error_general">حدث خطأ ما برجاء المحاولة مرة اخري!</string>

</resources>